# pos-system

./: .gitignore  CMakeLists.txt  README.md
assets/: OOP Project (POS System).pptx
docs/: io.md  menu.md
src/: main.cpp
src/menus/: inventory-menu.cpp  inventory-menu.h  login-menu.cpp  login-menu.h  login_menu.cpp  login_menu.h  pos-menu.h  statistics_menu.cpp  statistics_menu.h
src/menus/menu/: pos-menu.cpp
src/models/: product.cpp  product.h
src/utils/: data.cpp  data.h  input.cpp  input.h  io.cpp  io.h  menu.cpp  menu.h  service.cpp  service.h
